--- a/readme
+++ b/readme
@@ -1,3 +1,4 @@
+I forked this to do a pull request. -Corey Harding(http://www.legacysecuritygroup.com)
 ProxBrute v0.3 for r517
 by brad antoniewicz
 foundstone
