--- a/readme
+++ b/readme
@@ -1,4 +1,7 @@
+<pre>
+EDIT:
 I forked this to do a pull request. -Corey Harding(http://www.legacysecuritygroup.com)
+</pre>
 ProxBrute v0.3 for r517
 by brad antoniewicz
 foundstone
