--- a/readme
+++ b/readme
@@ -1,6 +1,7 @@
 ------------------------
 EDIT:
-I forked this to do a pull request. -Corey Harding(http://www.legacysecuritygroup.com)
+I forked this to do a pull request adding the updated port of proxbrute to the newer firmware with the cdc bootloader.
+-Corey Harding(http://www.legacysecuritygroup.com)
 ------------------------
 
 
